# smuthi

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.rst  MANIFEST.in  README.rst  make_wheel_windows.bat  nfmds.pyf  pyproject.toml  release_checklist.rst  setup.py  smuthi_postprocessing_graphical_output.py  test.py
CI/: build-wheel-manylinux.sh
docs/: about_smuthi.rst  auto_param.rst  building_blocks.rst  complex_contours.rst  conf.py  cross_sections.rst  examples.rst  gallery.rst  index.rst  installation.rst  literature.rst  multipole_cutoff.rst  numerical_parameters.rst  requirements.txt  simulation_guidelines.rst  smuthi_api.rst  smuthi_api_fields.rst  smuthi_api_linearsystem.rst  smuthi_api_nfmds.rst  smuthi_api_particlecoupling.rst  smuthi_api_postprocessing.rst  smuthi_api_top.rst  smuthi_api_utility.rst  solver_settings.rst  sommerfeld_integrals.rst  units.rst
docs/_source/: index.rst  literature.rst
docs/images/: flowchart_lmax.drawio  flowchart_many_particles.drawio  flowchart_mmax.drawio  flowchart_neffmax_relconv.drawio
docs/large_rho/: large_rho.py
examples/tutorials/: demonstrate_layerresponse_precision.py
smuthi/: initial_field.py  junk.py  layers.py  particles.py  simulation.py  version.py
smuthi/fields/: __init__.py  expansions.py  expansions_cuda.py  spherical_harmonic_translations.py  transformations.py  vector_wave_functions.py
smuthi/linearsystem/: linear_system.py
smuthi/periodicboundaries/: __init__.py  coupling_helper.py  ewald_helper.py  ewald_helper_functions.py  ewald_lattice_sums.py  expansions_cuda.py  (+9 more)
(+186 files in other folders)
